test/scc/expr/semantic-errors/119.a
119.t:6:13: error: braces around scalar initializer